--- a/src/app/page/topic-view/topic-view.component.html
+++ b/src/app/page/topic-view/topic-view.component.html
@@ -36,8 +36,8 @@
                                                        </span>
                                                        </div>
                                             </td>
-                                            <td>
-                                              <a *ngIf="check" class="navLink ml-5" mat-icon-button color="accent"
+                                            <td *ngIf="check">
+                                              <a  class="navLink ml-5" mat-icon-button color="accent"
                                                          [routerLink]="'/page/updateTopic/'+topic.id"><mat-icon class="mat-18">system_update</mat-icon></a>
                                                          <button class="navLink button-style" mat-icon-button color="warn"><mat-icon (click)="deleteTopic(topic.id)" class="mat-18">delete</mat-icon></button>
                                    </td>
