--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -58,9 +58,9 @@ body{
    height: 100%;
    li{
        transition-duration: 0.6s;
-    &:hover{
-        background: #5959f0;
-    }
+    // &:hover{
+    //     background: #5959f0;
+    // }
    }
    i{
     padding-right: 12px;
