--- a/src/app/page/view-course/view-course.component.html
+++ b/src/app/page/view-course/view-course.component.html
@@ -1,48 +1,68 @@
-<div class="container">
-           <div class="row">
-                      <div class="col-md-12">
-                                 <h2>Course Table</h2>
-                                 <a   class="navLink " mat-raised-button color="primary"
-                                 [routerLink]="'/page/home'">Back to Home</a>
-                                 <a *ngIf="check"  class="navLink ml-10" mat-raised-button color="primary"
-                                 [routerLink]="'/page/course'">Add Course</a>
-                                 <table class="table table-striped">
-                                            <thead>
-                                              <tr>
-                                                <th>Course Id</th>
-                                                <th>Course Name</th>
-                                                <th>Author</th>
-                                                <th>Mentor</th>
-                                                <th *ngIf="check">Actions</th>
-                                              </tr>
-                                            </thead>
-                                            <tbody>
-                                             <tr *ngFor="let course of courses">
-                                            <td>{{course.courseId}}</td>
-                                            <td><a  class="navLink ml-5" [routerLink]="['/page/topicView/'+course.courseId]">{{course.courseName.toUpperCase()}}</a></td>
-                                            <td>
-                                            <div *ngFor="let user of users">
-                                            <span *ngIf="course.authorId === user.id" >
-                                                       {{user.name}}
-                                            </span>
-                                            </div>
-                                            </td>
-                                            <td>
-                                                       <div *ngFor="let user of users">
-                                                       <span *ngIf="course.mentorId === user.id" >
-                                                                  {{user.name}}
-                                                       </span>
-                                                       </div>
-                                                       </td>
-                                            <td *ngIf="check">
-                                                       <a   class="navLink ml-5" mat-icon-button color="accent"
-                                                       [routerLink]="['/page/updateCourse/'+course.courseId]"><mat-icon class="mat-18">system_update</mat-icon></a>
-            
-                                                       <button class="navLink button-style" mat-icon-button color="warn"><mat-icon (click)="deleteCourse(course.courseId)" class="mat-18">delete</mat-icon></button>
-                                            </td>
-                                             </tr>
-                                            </tbody>
-                                          </table>
+<div class="d-flex h-100vh">
+  <app-side-menu class="side_menu"></app-side-menu>
+  <div class="w-100 p-4 mt-5">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12 reused_table_header">
+          <div class="card">
+            <div class="card-header card-header-warning">
+              <div class="d-flex justify-content-between align-items-center">
+                <h4 class="card-title mb-0 ">Course List</h4>
+                <div>
+                  <a *ngIf="check" mat-raised-button [routerLink]="'/page/course'">Add Course</a>
+                </div>
+              </div>
+            </div>
+            <div class="card-body table-responsive">
+              <table class="table table-hover">
+                <thead>
+                  <tr>
+                    <th>Course Id</th>
+                    <th>Course Name</th>
+                    <th>Author</th>
+                    <th>Mentor</th>
+                    <th *ngIf="check">Actions</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let course of courses">
+                    <td>{{course.courseId}}</td>
+                    <td>
+                      <a class="navLink mr-1"
+                        [routerLink]="['/page/topicView/'+course.courseId]">
+                        <span class="p-2 badge badge-info">{{course.courseName.toUpperCase()}}</span>
+                      </a>
+                      </td>
+                    <td>
+                      <div *ngFor="let user of users">
+                        <span *ngIf="course.authorId === user.id">
+                          {{user.name}}
+                        </span>
                       </div>
-           </div>
+                    </td>
+                    <td>
+                      <div *ngFor="let user of users">
+                        <span *ngIf="course.mentorId === user.id">
+                          {{user.name}}
+                        </span>
+                      </div>
+                    </td>
+                    <td *ngIf="check">
+                      <a class="text-white" mat-mini-fab color="accent"
+                        [routerLink]="['/page/updateCourse/'+course.courseId]">
+                        <mat-icon class="mat-18">system_update</mat-icon>
+                      </a>
+    
+                      <a class="ml-3 text-white" mat-mini-fab color="primary">
+                        <mat-icon (click)="deleteCourse(course.courseId)" class="mat-18">delete</mat-icon>
+                      </a>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
