--- a/src/app/page/view-users/view-users.component.html
+++ b/src/app/page/view-users/view-users.component.html
@@ -1,10 +1,10 @@
-<div class="d-flex" style="height:100vh">
+<div class="d-flex h-100vh">
   <app-side-menu class="side_menu"></app-side-menu>
   <div class="w-100 p-4 mt-5">
     <section class="user_list_component">
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
-          <div class="col-lg-12 col-md-12">
+          <div class="col-lg-12 col-md-12 reused_table_header">
             <div class="card">
               <div class="card-header card-header-warning">
                 <div class="d-flex justify-content-between align-items-center">
@@ -32,7 +32,6 @@
                       <td>{{user.profile.toUpperCase()}}</td>
                       <td>
                         <div *ngFor="let role of user.roles">
-
                           {{role.roleName}}
                         </div>
                       </td>
