--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -7,17 +7,18 @@
 
 
 // define 
-body{
+body {
     background-color: #f4f6fa;
     // height: 100% !important;
 }
 
-a{
-    &:hover{
+a {
+    &:hover {
         text-decoration: none !important;
-        color: #000!important;
+        color: #000 !important;
     }
 }
+
 .card {
     background-color: #fff;
     border: 0 solid transparent;
@@ -33,9 +34,10 @@ a{
 .mat-raised-button.mat-primary,
 .mat-fab.mat-primary,
 .mat-mini-fab.mat-primary {
-    background-color: $blue !important;
+    background-color: $blue  !important;
 }
-.mat-primary.mat-button-disabled{
+
+.mat-primary.mat-button-disabled {
     background-color: #959393 !important;
 }
 
@@ -43,47 +45,82 @@ a{
 .mat-raised-button.mat-accent,
 .mat-fab.mat-accent,
 .mat-mini-fab.mat-accent {
-    background-color: $acent !important;
+    background-color: $acent  !important;
 }
 
-.logo{
+.logo {
     border-bottom: 1px solid #6d61dd;
     padding: 14px;
     margin-bottom: 20px;
     display: flex;
     align-items: center;
-    span{
+
+    span {
         font-size: 33px;
         font-weight: 700;
         padding-left: 12px;
     }
 }
-.side_menu{
+
+.side_menu {
     width: 250px;
     padding-top: 15px;
-   list-style-type: none;
-   background: $blue ;
-   height: 100%;
-   li{
-       transition-duration: 0.6s;
-    // &:hover{
-    //     background: #5959f0;
-    // }
-   }
-   i{
-    padding-right: 12px;
-   }
-   ul{
     list-style-type: none;
-   }
+    background: $blue ;
+    height: 100%;
 
-   .nav-link{
+    li {
+        transition-duration: 0.6s;
+        // &:hover{
+        //     background: #5959f0;
+        // }
+    }
+
+    i {
+        padding-right: 12px;
+    }
+
+    ul {
+        list-style-type: none;
+    }
+
+    .nav-link {
         color: #fff !important;
         letter-spacing: 1.1px;
         transition-duration: .7s;
         cursor: pointer;
-        &:hover{
+
+        &:hover {
             letter-spacing: 1.3px;
         }
+    }
+}
+
+.reused_table_header {
+    .card .card-header-warning {
+        box-shadow: 0 4px 20px 0 rgb(0 0 0 / 14%), 0 7px 10px -5px rgb(156 39 176 / 40%);
+    }
+
+    .card .card-header.card-header-warning {
+        border-radius: 3px;
+        margin-top: -20px;
+        padding: 15px;
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+
+    .card .card-header-warning {
+        background: linear-gradient(60deg, #ab47bc, #8e24aa);
+    }
+
+    .card-title {
+        font-size: 18px;
+        color: #fff;
+    }
+
+    .card-category {
+        font-size: 15px;
+        color: #fff;
+        margin-bottom: 0;
     }
 }
