--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,6 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.h-100vh{
+    height: 100vh;
+}
