worked on user and course or topic

--- a/src/app/page/add-user/add-user.component.html
+++ b/src/app/page/add-user/add-user.component.html
@@ -5,7 +5,7 @@
             <div class="row">
                 <div class="col-md-12 card">
                     <div class="card-header-danger">
-                        <h4 class="mb-1">Add User</h4>
+                        <h4 class="mb-1">Add New User</h4>
                     </div>
                     <p *ngIf="msg" class="alert alert-danger">{{errorMsg}}</p>
                     <form #userForm="ngForm" (ngSubmit)="formSubmit(userForm.value)">
