--- a/src/app/page/course/course.component.html
+++ b/src/app/page/course/course.component.html
@@ -5,7 +5,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-10 card pb-3">
                     <div class="card-header-danger">
-                        <h4 class="mb-1">Add Course</h4>
+                        <h4 class="mb-1">Add New Course</h4>
                     </div>
                     <p *ngIf="msg" style="color: red;">{{errorMsg}}</p>
                     <form #courseForm="ngForm" (ngSubmit)="AddCourse(courseForm.value)">
