--- a/src/app/page/update-course/update-course.component.html
+++ b/src/app/page/update-course/update-course.component.html
@@ -1,39 +1,56 @@
-<div class="container">
-           <div class="row">
-               <div class="col-md-12">
-                   <h2 class="text-center">Add Course</h2>
-                   <p *ngIf="msg" style="color: red;">{{errorMsg}}</p>
-                   <form #courseForm="ngForm" (ngSubmit)="updateCourse(courseForm.value)">
-                       <div>
-                        <mat-form-field class="form-field" appearance="outline">
-                            <mat-label>Course</mat-label>
-                            <input #courses="ngModel" (change)="updateName($event)" (click)="updateName($event)" [(ngModel)]="courseName" name="courseName" type="text" matInput placeholder="Enter Course">
-                        </mat-form-field>
-                       </div>
-                       <div>
+<div class="d-flex h-100vh">
+    <app-side-menu class="side_menu"></app-side-menu>
+    <div class="w-100 p-4 mt-5">
+        <div class="container-fluid profile_component">
+            <div class="row justify-content-center">
+                <div class="col-md-9 card">
+                    <div class="card-header card-header-danger">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <h4 class="card-title mb-0 ">Add New Course</h4>
+                            <a class="navLink" mat-raised-button [routerLink]="'/page/viewCourse'">Back to Courses</a>
+                        </div>
+                    </div>
+                    <div>
+                        <p *ngIf="msg" class="text-danger">{{errorMsg}}</p>
+                        <form #courseForm="ngForm" (ngSubmit)="updateCourse(courseForm.value)">
+                            <div class="row justify-content-center">
+                                <div class="col-md-9">
+                                    <div class="mt-4">
+                                        <mat-form-field class="form-field w-100" appearance="outline">
+                                            <mat-label>Course</mat-label>
+                                            <input #courses="ngModel" (change)="updateName($event)"
+                                                (click)="updateName($event)" [(ngModel)]="courseName" name="courseName"
+                                                type="text" matInput placeholder="Enter Course">
+                                        </mat-form-field>
+                                    </div>
 
-                      <select class="form-control" name="authorId" #authorId="ngModel" [(ngModel)]="authorName">
-                                 <option *ngFor="let author of authorRole"  [value]="author.user_id">
-                                            {{author.name}}
-                                 </option>
-                      </select>
-                       </div>
-                       <div>
-                      <select class="form-control" name="mentorId" #mentorId="ngModel" [(ngModel)]="mentorName" >
-                                 <option *ngFor="let mentor of mentorRole"  [value]="mentor.user_id">
-                                            {{mentor.name}}
-                                 </option>
-                      </select>
-                       </div>
-                      
-                       <div class="container text-center">
-                           <div class="example-button-row">
-                               <button type="submit" mat-raised-button color="primary" >Update Course</button>
-                               <a   class="navLink ml-5" mat-raised-button color="primary"
-                               [routerLink]="'/page/viewCourse'">Back to Courses</a>
+                                    <div class="form-group">
+                                        <select class="form-control" name="authorId" #authorId="ngModel"
+                                            [(ngModel)]="authorName">
+                                            <option *ngFor="let author of authorRole" [value]="author.user_id">
+                                                {{author.name}}
+                                            </option>
+                                        </select>
+                                    </div>
+                                    <div class="form-group">
+                                        <select class="form-control" name="mentorId" #mentorId="ngModel"
+                                            [(ngModel)]="mentorName">
+                                            <option *ngFor="let mentor of mentorRole" [value]="mentor.user_id">
+                                                {{mentor.name}}
+                                            </option>
+                                        </select>
+                                    </div>
+                                    <div class="mb-4">
+                                        <button type="submit" class="w-100" mat-raised-button color="primary">
+                                            Update Course
+                                        </button>
+                                    </div>
+                                </div>
                             </div>
-                       </div>
-                   </form>
-               </div>
-           </div>
-       </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
