--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -84,7 +84,7 @@
                                         <mat-select required #profile="ngModel" name="profile"
                                             [(ngModel)]="user.profile">
                                             <mat-option *ngFor="let profile of coursesList"
-                                                [value]="profile.courseName">
+                                                [value]="profile.value">
                                                 {{profile.courseName}}
                                             </mat-option>
                                         </mat-select>
