--- a/src/app/page/add-user/add-user.component.html
+++ b/src/app/page/add-user/add-user.component.html
@@ -72,7 +72,7 @@
                         <mat-form-field class="form-field" appearance="outline">
                             <mat-label>Profile</mat-label>
                             <mat-select required #profile="ngModel" name="profile" [(ngModel)]="user.profile">
-                                <mat-option *ngFor="let profile of coursesList"  [value]="profile.courseName">
+                                <mat-option *ngFor="let profile of coursesList"  [value]="profile.value">
                                     {{profile.courseName}}
                                 </mat-option>
                             </mat-select>
@@ -103,8 +103,7 @@
                        <div class="container text-center">
                            <div class="example-button-row">
                                <button type="submit" class="btn " [disabled]="userForm.invalid" mat-raised-button color="primary" >Add User</button>
-                               <a class="navLink ml-5" mat-raised-button color="primary"
-                               [routerLink]="'/page/viewUsers'">Back to Users</a>
+                               <button class="navLink button-style" mat-raised-button color="primary" (click)="prevoius()">Back to Users</button>
                            </div>
                        </div>
                    </form>
