--- a/src/app/page/course/course.component.html
+++ b/src/app/page/course/course.component.html
@@ -4,7 +4,17 @@
                    <h2 class="text-center">Add Course</h2>
                    <p *ngIf="msg" style="color: red;">{{errorMsg}}</p>
                    <form #courseForm="ngForm" (ngSubmit)="AddCourse(courseForm.value)">
-                       <div>
+                        <div>
+                            <mat-form-field class="form-field" appearance="outline">
+                                <mat-label>Course</mat-label>
+                                <mat-select (selectionChange)="updatelist()"  #courses="ngModel" name="courseName" [(ngModel)]="course.courseName">
+                                    <mat-option *ngFor="let courseData of coursesList"  [value]="courseData.value">
+                                        {{courseData.courseName}}
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
+                       <!-- <div>
                         <mat-form-field class="form-field" appearance="outline">
                             <mat-label>Course</mat-label>
                             <input (change)="updatelist()" #courses="ngModel" [(ngModel)]="course.courseName" required name="courseName" type="text" matInput placeholder="Enter Course">
@@ -15,7 +25,7 @@
                              Course is required
                             </div>
                         </div>
-                       </div>
+                       </div> -->
                        <div>
                         <mat-form-field class="form-field" appearance="outline">
                             <mat-label>Author</mat-label>
