--- a/src/app/page/question-view/question-view.component.html
+++ b/src/app/page/question-view/question-view.component.html
@@ -20,7 +20,8 @@
                                             <tbody>
                                                        <tr *ngFor="let question of questions">
                                                                   <td>{{question.id}}</td>
-                                                                  <td><a  class="navLink ml-5" [routerLink]="''">{{question.question}}</a></td>
+                                                                  <!-- <td><a  class="navLink ml-5" [routerLink]="''">{{question.question}}</a></td> -->
+                                                                  <td>{{question.question}}</td>
                                                                   <td>{{question.subTopic.subTopicName}}</td>
                                                                   <td>{{question.subTopic.topic.topicName}}</td>
                                                                   <td *ngIf="check">
