--- a/src/app/page/side-menu/side-menu.component.html
+++ b/src/app/page/side-menu/side-menu.component.html
@@ -3,21 +3,36 @@
         <img src="assets/images/logo1.svg" height="70px" alt=""> 
          <span class="text-white">T &nbsp;D</span>
     </div>
-
+    <li class="nav-item">
+        <a class="nav-link" [routerLink]="'/page/home'">
+            <i class="fa fa-tachometer" aria-hidden="true"></i>
+            Dashboard</a>
+    </li>
     <ul class="nav flex-column" *ngFor="let user_roles of userRoleList" [ngSwitch]="user_roles.roleName">
-        <li class="nav-item">
-            <a class="nav-link" [routerLink]="'/page/home'">
-                <i class="fa fa-tachometer" aria-hidden="true"></i>
-                Dashboard</a>
-        </li>
+        
         <li *ngSwitchCase="'ROLE_ADMIN'" class="nav-item">
             <!-- admin role link -->
             <nav>
                 <ul class="p-0">
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" [routerLink]="'/page/viewUsers'">
                             <i class="fa fa-users" aria-hidden="true"></i>
                             Users list</a>
+                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" [routerLink]="'/page/viewAuthors'">
+                            <i class="fa fa-users" aria-hidden="true"></i>
+                            Authors list</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" [routerLink]="'/page/viewMentors'">
+                            <i class="fa fa-users" aria-hidden="true"></i>
+                            Mentors list</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" [routerLink]="'/page/viewTrainee'">
+                            <i class="fa fa-users" aria-hidden="true"></i>
+                            Trainee list</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" [routerLink]="'/page/viewCourse'">
@@ -42,19 +57,20 @@
             <a class="nav-link" [routerLink]="['/page/performQuestion/'+courseName]"> Perform
                 questions</a>
         </li>
-        <li  class="nav-item">
-            <a class="nav-link"  [routerLink]="'/page/viewProfile'">
-                <i class="fa fa-user" aria-hidden="true"></i>
-                 Profile
-            </a>
-        </li>
-
-
-        <li class="nav-item">
-            <a class="nav-link" (click)="logout()">
-                <i class="fa fa-sign-out" aria-hidden="true"></i>
-                Logout</a>
-            <!-- <h3><a class="nav-link"  [routerLink]="'/page/viewProfile'">{{user}}</a></h3> -->
-        </li>
+       
     </ul>
+    <li  class="nav-item">
+        <a class="nav-link"  [routerLink]="'/page/viewProfile'">
+            <i class="fa fa-user" aria-hidden="true"></i>
+             Profile
+        </a>
+    </li>
+
+
+    <li class="nav-item">
+        <a class="nav-link" (click)="logout()">
+            <i class="fa fa-sign-out" aria-hidden="true"></i>
+            Logout</a>
+        <!-- <h3><a class="nav-link"  [routerLink]="'/page/viewProfile'">{{user}}</a></h3> -->
+    </li>
 </div>
