add user and course component conflicts update

--- a/src/app/page/add-user/add-user.component.html
+++ b/src/app/page/add-user/add-user.component.html
@@ -85,7 +85,7 @@
                                     <mat-form-field class="form-field" appearance="outline">
                                         <mat-label>Profile</mat-label>
                                         <mat-select required #profile="ngModel" name="profile" [(ngModel)]="user.profile">
-                                            <mat-option *ngFor="let profile of coursesList" [value]="profile.courseName">
+                                            <mat-option *ngFor="let profile of coursesList" [value]="profile.value">
                                                 {{profile.courseName}}
                                             </mat-option>
                                         </mat-select>
@@ -118,6 +118,8 @@
                                     <div class="example-button-row">
                                         <button type="submit" class="btn btn-block" [disabled]="userForm.invalid" mat-raised-button
                                             color="primary">Add User</button>
+                                            <button class="navLink button-style" mat-raised-button color="primary" (click)="prevoius()">Back to Users</button>
+
                                     </div>
                                 </div>
                             </div>
