add new row on table home component

--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -115,6 +115,21 @@
                               <td>july@example.com</td>
                               <td>9876543210</td>
                            </tr>
+
+                           <tr>
+                              <td>4</td>
+                              <td>Jun</td>
+                              <td>Wooley</td>
+                              <td>Wuly@example.com</td>
+                              <td>9876543210</td>
+                           </tr>
+                           <tr>
+                              <td>5</td>
+                              <td>May</td>
+                              <td>Joy</td>
+                              <td>joy@example.com</td>
+                              <td>9876543210</td>
+                           </tr>
                         </tbody>
                      </table>
                   </div>
