working on add user page, auther, mentor component

--- a/src/app/page/add-user/add-user.component.html
+++ b/src/app/page/add-user/add-user.component.html
@@ -118,8 +118,7 @@
                                     <div class="example-button-row">
                                         <button type="submit" class="btn btn-block" [disabled]="userForm.invalid" mat-raised-button
                                             color="primary">Add User</button>
-                                            <button class="navLink button-style" mat-raised-button color="primary" (click)="prevoius()">Back to Users</button>
-
+                                            <!-- <button class="navLink button-style" mat-raised-button color="primary" (click)="prevoius()">Back to Users</button> -->
                                     </div>
                                 </div>
                             </div>
