--- a/src/assets/sass/style.css
+++ b/src/assets/sass/style.css
@@ -341,7 +341,7 @@ a:hover {
   margin-right: 30px;
 }
 .reused_table_header .card .card-header-warning {
-  background: linear-gradient(60deg, #ab47bc, #8e24aa);
+  background: linear-gradient(60deg, #8a7ef7, #1904e5);
 }
 .reused_table_header .card-title {
   font-size: 18px;
