--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -110,7 +110,8 @@ a {
     }
 
     .card .card-header-warning {
-        background: linear-gradient(60deg, #ab47bc, #8e24aa);
+        // background: linear-gradient(60deg, #ab47bc, #8e24aa);
+        background: linear-gradient(60deg, #8a7ef7, #1904e5);
     }
 
     .card-title {
