--- a/src/app/page/view-users/view-users.component.html
+++ b/src/app/page/view-users/view-users.component.html
@@ -39,7 +39,11 @@
                         <a class="text-white" mat-mini-fab color="accent" [routerLink]="['/page/updateUser/'+user.id]">
                           <mat-icon class="mat-18">system_update</mat-icon>
                         </a>
-                        <!-- <button class="navLink button-style" mat-icon-button color="accent"><mat-icon (click)="updateUser(user.id)"  class="mat-18">system_update</mat-icon></button> -->
+                        <!-- 
+                          <button class="navLink button-style" mat-icon-button color="accent">
+                          <mat-icon (click)="updateUser(user.id)"  class="mat-18">system_update</mat-icon>
+                          </button>
+                        -->
 
                         <a class="ml-3 text-white" mat-mini-fab color="primary">
                           <mat-icon (click)="deleteUser(user.id)" class="mat-18">delete</mat-icon>
